--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="hinge_full_logo_width">150dp</dimen>
-    <dimen name="hinge_full_logo_top_margin">18dp</dimen>
+    <dimen name="hinge_full_logo_top_margin">55dp</dimen>
+    <dimen name="hinge_full_logo_height">60dp</dimen>
+    <dimen name="second_title_text_szie">20sp</dimen>
+    <dimen name="phone_number_margin_bottom">46dp</dimen>
 </resources>
