--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <dimen name="hinge_full_logo_height">60dp</dimen>
     <dimen name="second_title_text_szie">20sp</dimen>
     <dimen name="phone_number_margin_bottom">46dp</dimen>
+    <dimen name="btn_facebook_height">55dp</dimen>
+    <dimen name="btn_facebook_padding">60dp</dimen>
+    <dimen name="policy_margin_start">6dp</dimen>
+    <dimen name="policy_marginbotoom">15dp</dimen>
+    <dimen name="btn_facebook_radius">100dp</dimen>
 </resources>
