--- a/app/src/main/res/layout/activity_phone_num.xml
+++ b/app/src/main/res/layout/activity_phone_num.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:text="Hinge will send you a text with a verification code. Message and data rates may apply."
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:layout_marginTop="400dp"
         android:layout_marginStart="30dp"/>
     <ImageView
