--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="faceBook_btn_background">#692F60</color>
+    <color name="boost_color">#7eaaa9</color>
+    <color name="line">#a9a9a9</color>
 </resources>
