--- a/app/src/main/res/layout/activity_email_screen.xml
+++ b/app/src/main/res/layout/activity_email_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".verified">
+    tools:context=".email_screen">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,15 +20,20 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_security"
+        android:src="@drawable/ic_envelope"
         android:layout_marginStart="45dp"
         android:layout_marginTop="80dp"/>
-
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/circle_grey"
+        android:layout_marginTop="90dp"
+        android:layout_marginStart="120dp"/>
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="You are verified."
+        android:text="What's your"
         android:textSize="30sp"
         android:textColor="#000000"
         android:textStyle="bold"
@@ -38,39 +43,18 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="what next?"
-        android:layout_below="@id/textView"
+        android:text="email?"
         android:textSize="30sp"
+        android:textStyle="bold"
         android:textColor="#000000"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif"
-        android:layout_marginStart="30dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rectangle_bg"
         android:layout_below="@id/textView"
-        android:padding="20dp"
-        android:id="@+id/tvcreate"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="150dp"
-        android:text="Create account"
-        android:textStyle="bold"
-        android:textAlignment="center"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rectangle_bg"
-        android:layout_below="@id/tvcreate"
-        android:padding="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="150dp"
-        android:text="Pre-fill with Facebook"
-        android:textStyle="bold"
-        android:textAlignment="center"/>
+        android:layout_marginStart="30dp"/>
+    <View
+        android:layout_width="350dp"
+        android:layout_height="3dp"
+        android:background="#000000"
+        android:layout_marginTop="310dp"
+        android:layout_marginStart="30dp"/>
     <ImageView
         android:layout_width="wrap_content"
         android:id="@+id/tvcircle"
@@ -84,8 +68,21 @@
         android:src="@drawable/ic_right_arrow"
         android:layout_marginStart="365dp"
         android:layout_marginTop="685dp"/>
-
-
-
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/circle_lineout"
+        android:layout_marginTop="650dp"
+        android:layout_marginStart="25dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="if yoy do not wish to receive marketing communications about our products and services, check this box"
+        android:textSize="20sp"
+        android:textStyle="normal"
+        android:textColor="#A0A0A0"
+        android:layout_marginTop="620dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginStart="70dp"/>
 
 </RelativeLayout>
