--- a/app/src/main/res/layout/activity_name_screen.xml
+++ b/app/src/main/res/layout/activity_name_screen.xml
@@ -18,6 +18,18 @@
         android:src="@drawable/ic_text"
         android:layout_marginStart="45dp"
         android:layout_marginTop="80dp"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/circle_grey"
+        android:layout_marginTop="90dp"
+        android:layout_marginStart="120dp"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/circle_grey"
+        android:layout_marginTop="90dp"
+        android:layout_marginStart="150dp"/>
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
