--- a/app/src/main/res/layout/activity_phone_num.xml
+++ b/app/src/main/res/layout/activity_phone_num.xml
@@ -82,6 +82,13 @@
         android:id="@+id/tvline"
         android:background="#000000"
         android:layout_marginTop="370dp"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="335dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="200dp" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="2dp"
