--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,4 +41,163 @@
         <item name="android:fontFamily">@font/modern_era_regular</item>
     </style>
 
+    <style name="actionbar_cardView_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/actionbar_cardview_height</item>
+        <item name="android:elevation">@dimen/actionbar_card_elevation</item>
+    </style>
+
+    <style name="discover_title_textStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center|start</item>
+        <item name="android:layout_marginStart">30dp</item>
+        <item name="android:fontFamily">@font/modern_era_bold</item>
+        <item name="android:textSize">@dimen/tv_title_name_textSize</item>
+    </style>
+
+    <style name="overflow_icon_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_gravity">center|end</item>
+        <item name="android:layout_marginTop">@dimen/overflow_icon_margin</item>
+        <item name="android:layout_marginEnd">@dimen/overflow_icon_margin</item>
+        <item name="android:layout_marginBottom">@dimen/overflow_icon_margin</item>
+    </style>
+    <style name="left_arrow">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_gravity">center|start</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginTop">@dimen/overflow_icon_margin</item>
+        <item name="android:layout_marginEnd">@dimen/overflow_icon_margin</item>
+        <item name="android:layout_marginBottom">@dimen/overflow_icon_margin</item>
+    </style>
+
+    <style name="discover_elements_cardView_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/discover_elements_cardView_margin</item>
+        <item name="android:layout_marginTop">@dimen/discover_elements_cardView_marginTop</item>
+    </style>
+    <style name="Preferd_preference">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/discover_elements_cardView_margin</item>
+        <item name="android:layout_marginTop">0dp</item>
+    </style>
+
+    <style name="discover_elements_title_textview_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/discover_elements_title_textview_margin</item>
+        <item name="android:textSize">@dimen/discover_elements_title_textview_textSzie</item>
+        <item name="android:fontFamily">@font/modern_era_bold</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="basic_preference">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/discover_elements_title_textview_margin</item>
+        <item name="android:textSize">@dimen/discover_elements_title_textview_textSzie</item>
+        <item name="android:fontFamily">@font/modern_era_bold</item>
+        <item name="android:textColor">@color/line</item>
+    </style>
+    <style name="i_intrested">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/discover_elements_title_textview_margin</item>
+        <item name="android:textSize">@dimen/discover_elements_title_textview_textSzie</item>
+        <item name="android:fontFamily">@font/modern_era_bold</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="women">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/discover_elements_title_textview_margin</item>
+        <item name="android:textSize">@dimen/discover_elements_title_textview_textSzie</item>
+        <item name="android:fontFamily">@font/modern_era_bold</item>
+        <item name="android:textColor">@color/line</item>
+    </style>
+
+    <style name="discover_elements_imageViewStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/discover_elements_imageviewheighht</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+    <style name="elements_1_preference">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">120dp</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+
+    <style name="discover_elements_like_background">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/discover_elements_likeBackground_margin</item>
+        <item name="android:background">@color/text_white</item>
+    </style>
+
+    <style name="discover_elements_like_image_style">
+        <item name="android:layout_width">@dimen/like_button_height_width</item>
+        <item name="android:layout_height">@dimen/like_button_height_width</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_margin">@dimen/like_button_margin</item>
+    </style>
+
+    <style name="discover_elements_constraint_forTextonly">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginEnd">@dimen/discover_elements_likeBackground_margin</item>
+        <item name="android:paddingStart">@dimen/discover_constraint_textonly_padding</item>
+        <item name="android:paddingTop">@dimen/discover_constraintLayout_padding_Top</item>
+    </style>
+    <style name="Member_preference">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginEnd">@dimen/discover_elements_likeBackground_margin</item>
+        <item name="android:paddingStart">@dimen/discover_constraint_textonly_padding</item>
+        <item name="android:paddingTop">@dimen/discover_constraintLayout_padding_Top</item>
+    </style>
+
+    <style name="discover_elements_content_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/tiempos_headline_bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/discover_element_content_textsize</item>
+    </style>
+
+    <style name="discover_Horizondal_line">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/discover_elements_title_textview_margin
+        </item>
+        <item name="android:layout_marginEnd">@dimen/discover_elements_title_textview_margin</item>
+        <item name="android:src">@drawable/line_horizondal</item>
+    </style>
+
+    <style name="discover_userInformation_textView_style2">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/discover_elements_title_textview_margin</item>
+        <item name="android:textSize">@dimen/discover_elements_title_textview_textSzie</item>
+        <item name="android:fontFamily">@font/modern_era_bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:gravity">center</item>
+        <item name="android:drawablePadding">@dimen/discover_drawable_padding</item>
+    </style>
+
+    <style name="btoom_action_bar_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:background">@color/bottom_action_background</item>
+    </style>
+    <style name="Prefernce_cardView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/actionbar_cardview_height</item>
+        <item name="android:elevation">@dimen/actionbar_card_elevation</item>
+    </style>
+
+
 </resources>
