added few functionality to discover screen

--- a/app/src/main/res/layout/activity_discover.xml
+++ b/app/src/main/res/layout/activity_discover.xml
@@ -71,6 +71,7 @@
                         app:layout_constraintEnd_toEndOf="parent">
 
                         <ImageView
+                            android:id="@+id/ivLike1"
                             style="@style/discover_elements_like_image_style"
                             android:src="@drawable/ic_like" />
                     </androidx.cardview.widget.CardView>
@@ -108,7 +109,7 @@
                         app:layout_constraintEnd_toEndOf="parent">
 
                         <ImageView
-                            android:id="@+id/tvTextContentLike1"
+                            android:id="@+id/ivLike2"
                             style="@style/discover_elements_like_image_style"
                             android:src="@drawable/ic_like" />
                     </androidx.cardview.widget.CardView>
@@ -149,7 +150,7 @@
                         app:layout_constraintEnd_toEndOf="parent">
 
                         <ImageView
-                            android:id="@+id/ivImagelike2"
+                            android:id="@+id/ivLike3"
                             style="@style/discover_elements_like_image_style"
                             android:src="@drawable/ic_like" />
                     </androidx.cardview.widget.CardView>
@@ -335,7 +336,7 @@
                         app:layout_constraintEnd_toEndOf="parent">
 
                         <ImageView
-                            android:id="@+id/ivImagelike3"
+                            android:id="@+id/ivLike4"
                             style="@style/discover_elements_like_image_style"
                             android:src="@drawable/ic_like" />
                     </androidx.cardview.widget.CardView>
@@ -373,7 +374,7 @@
                         app:layout_constraintEnd_toEndOf="parent">
 
                         <ImageView
-                            android:id="@+id/tvTextContentLike2"
+                            android:id="@+id/ivLike5"
                             style="@style/discover_elements_like_image_style"
                             android:src="@drawable/ic_like" />
                     </androidx.cardview.widget.CardView>
@@ -413,7 +414,7 @@
                         app:layout_constraintEnd_toEndOf="parent">
 
                         <ImageView
-                            android:id="@+id/ivImagelike4"
+                            android:id="@+id/ivLike6"
                             style="@style/discover_elements_like_image_style"
                             android:src="@drawable/ic_like" />
                     </androidx.cardview.widget.CardView>
@@ -451,7 +452,7 @@
                         app:layout_constraintEnd_toEndOf="parent">
 
                         <ImageView
-                            android:id="@+id/tvTextContentLike3"
+                            android:id="@+id/ivLike7"
                             style="@style/discover_elements_like_image_style"
                             android:src="@drawable/ic_like" />
                     </androidx.cardview.widget.CardView>
@@ -491,7 +492,7 @@
                         app:layout_constraintEnd_toEndOf="parent">
 
                         <ImageView
-                            android:id="@+id/ivImagelike5"
+                            android:id="@+id/ivLike8"
                             style="@style/discover_elements_like_image_style"
                             android:src="@drawable/ic_like" />
                     </androidx.cardview.widget.CardView>
@@ -532,7 +533,7 @@
                         app:layout_constraintEnd_toEndOf="parent">
 
                         <ImageView
-                            android:id="@+id/ivImagelike6"
+                            android:id="@+id/ivLike9"
                             style="@style/discover_elements_like_image_style"
                             android:src="@drawable/ic_like" />
                     </androidx.cardview.widget.CardView>
@@ -617,6 +618,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
+            android:id="@+id/ivDecline1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
