--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,8 +11,8 @@
     <color name="boost_color">#7eaaa9</color>
     <color name="line">#a9a9a9</color>
     <color name="text_white">#FFFFFFFF</color>
-
     <color name="bottom_action_background">#1A1A1A</color>
-
+    <color name="rose_background">#C6B5C7</color>
+    <color name="activity_background_colour">#F1F1F1</color>
 
 </resources>
