--- a/app/src/main/res/layout/activity_d_o_b.xml
+++ b/app/src/main/res/layout/activity_d_o_b.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".email_screen">
+    tools:context=".DOB">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,20 +20,14 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_envelope"
+        android:src="@drawable/ic_birthday_cake"
         android:layout_marginStart="45dp"
         android:layout_marginTop="80dp"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/circle_grey"
-        android:layout_marginTop="90dp"
-        android:layout_marginStart="120dp"/>
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="What's your"
+        android:text="What's your date"
         android:textSize="30sp"
         android:textColor="#000000"
         android:textStyle="bold"
@@ -43,7 +37,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="email?"
+        android:text="of birth?"
         android:textSize="30sp"
         android:textStyle="bold"
         android:textColor="#000000"
@@ -53,25 +47,33 @@
         android:layout_width="350dp"
         android:layout_height="3dp"
         android:background="#000000"
-        android:layout_marginTop="310dp"
+        android:layout_marginTop="350dp"
         android:layout_marginStart="30dp"/>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/circle_lineout"
-        android:layout_marginTop="650dp"
-        android:layout_marginStart="25dp"/>
+    <View
+        android:layout_width="350dp"
+        android:layout_height="3dp"
+        android:id="@+id/tvline"
+        android:background="#000000"
+        android:layout_marginTop="420dp"
+        android:layout_marginStart="30dp"/>
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="if yoy do not wish to receive marketing communications about our products and services, check this box"
-        android:textSize="20sp"
-        android:textStyle="normal"
-        android:textColor="#A0A0A0"
-        android:layout_marginTop="620dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginStart="70dp"/>
+        android:text="Age"
+        android:id="@+id/tvage"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:layout_below="@id/tvline"
+        android:layout_marginTop="60dp"
+        android:textColor="#000000"
+        android:gravity="center"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="This can't be changed later"
+        android:textSize="20dp"
+        android:gravity="center"
+        android:layout_below="@id/tvage"/>
     <ImageView
         android:layout_width="wrap_content"
         android:id="@+id/tvcircle"
@@ -85,5 +87,10 @@
         android:src="@drawable/ic_right_arrow"
         android:layout_marginStart="365dp"
         android:layout_marginTop="685dp"/>
+
+
+
+
+
 
 </RelativeLayout>
