intend from MainActivity to phone_num

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,6 +78,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
+            android:id="@+id/btn_facebook"
             style="@style/btn_facebook_style"
             android:text="@string/continue_with_facebook"
             android:drawableStart="@drawable/ic_facebook"
