--- a/app/src/main/res/layout/activity_otp_screen.xml
+++ b/app/src/main/res/layout/activity_otp_screen.xml
@@ -1,126 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".otp_screen">
+
     <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/dot_bg"
-        android:layout_marginTop="90dp"
-        android:layout_marginStart="10dp"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="55dp"
         android:background="@drawable/circle1_bg"
-        android:layout_marginTop="65dp"
-        android:layout_marginStart="30dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_security"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="80dp"/>
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Enter your"
         android:textSize="30sp"
         android:textColor="#000000"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif"
-        android:layout_marginTop="150dp"
-        android:layout_marginStart="30dp"/>
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/tiempos_headline_bold"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/textView26"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="verification code"
         android:layout_below="@id/textView"
-        android:textSize="30sp"
+        android:fontFamily="@font/tiempos_headline_bold"
+        android:text="verification code"
         android:textColor="#000000"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif"
-        android:layout_marginStart="30dp"/>
+
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/tvPhoneNumberDisplaydum"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="sent to +91 9036870487 ."
-        android:textColor="#696969"
+        android:layout_marginTop="25dp"
+        android:text="sent to +91"
+        android:textColor="@color/line"
         android:textSize="15sp"
-        android:layout_marginTop="240dp"
-        android:layout_marginStart="30dp"/>
+        app:layout_constraintStart_toStartOf="@+id/textView26"
+        app:layout_constraintTop_toBottomOf="@+id/textView26" />
+
     <TextView
+        android:id="@+id/tvPhoneNumberDisplay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="25dp"
+        android:text="4456545845"
+        android:textColor="@color/line"
+        android:textSize="15sp"
+        app:layout_constraintStart_toEndOf="@+id/tvPhoneNumberDisplaydum"
+        app:layout_constraintTop_toBottomOf="@+id/textView26" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="Edit"
+        android:textColor="#763568"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/tvPhoneNumberDisplay"
+        app:layout_constraintStart_toEndOf="@+id/tvPhoneNumberDisplay"
+        app:layout_constraintTop_toTopOf="@+id/tvPhoneNumberDisplay" />
+
+    <TextView
+        android:id="@+id/textView25"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="35dp"
+        android:text="Didn't get a code?"
+        android:textColor="#763568"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <ImageView
+        android:id="@+id/ivNext"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="20dp"
+        android:background="@drawable/phone_next_white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/dot_bg"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toStartOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
+    <com.broooapps.otpedittext2.OtpEditText
+        android:id="@+id/etOtp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Edit"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        android:textColor="#763568"
-        android:layout_marginTop="232dp"
-        android:layout_marginStart="210dp"/>
-    <View
-        android:layout_width="40dp"
-        android:layout_height="5dp"
-        android:background="#B0B0B0"
-        android:layout_marginTop="350dp"
-        android:layout_marginStart="30dp"/>
-    <View
-        android:layout_width="40dp"
-        android:layout_height="5dp"
-        android:background="#B0B0B0"
-        android:layout_marginTop="350dp"
-        android:layout_marginStart="80dp"/>
-    <View
-        android:layout_width="40dp"
-        android:layout_height="5dp"
-        android:background="#B0B0B0"
-        android:layout_marginTop="350dp"
-        android:layout_marginStart="130dp"/>
-    <View
-        android:layout_width="40dp"
-        android:layout_height="5dp"
-        android:background="#B0B0B0"
-        android:layout_marginTop="350dp"
-        android:layout_marginStart="180dp"/>
-    <View
-        android:layout_width="40dp"
-        android:layout_height="5dp"
-        android:background="#B0B0B0"
-        android:layout_marginTop="350dp"
-        android:layout_marginStart="230dp"/>
-    <View
-        android:layout_width="40dp"
-        android:layout_height="5dp"
-        android:background="#B0B0B0"
-        android:layout_marginTop="350dp"
-        android:layout_marginStart="280dp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Didn't get a code?"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:textColor="#763568"
-        android:layout_marginTop="690dp"
-        android:layout_marginStart="30dp"/>
+        android:clickable="false"
+        android:layout_marginTop="60dp"
+        android:cursorVisible="false"
+        android:digits="0123456789"
+        android:inputType="number"
+        android:maxLength="6"
+        android:padding="8dp"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumberDisplay"
+        app:oev_primary_color="@color/black"
+        app:oev_secondary_color="@color/black" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:id="@+id/tvcircle"
-        android:layout_marginTop="670dp"
-        android:layout_marginStart="350dp"
-        android:background="@drawable/circle"
-        android:layout_height="wrap_content"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_right_arrow"
-        android:layout_marginStart="365dp"
-        android:layout_marginTop="685dp"/>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
